# desktop_tech_support

./: .gitignore  Antigravitywork.md  CONTRIBUTING.md  DEVELOPMENT_REPORT.md  IMPROVEMENTS.md  Iterationplan.md  LICENSE  LIMITATIONS.md  PRODUCTION_DIARY.md  README.md  RELEASE_NOTES_2.3.1.md  SETUP.md  SHIPPING_CHECKLIST.md  TESTING.md  TROUBLESHOOTING.md  WHATS_DONE.md  Zora.spec  ZoraTechSupport.spec  config.json  file_version_info.txt  launcher.py  requirements.txt  setup.py  zora.py
.claude/: launch.json  settings.local.json
Resources_and_tactics/: Dell  Research_by_gemini.md  research_by_grok.md
ai/: __init__.py  agent.py  claude_provider.py  knowledge.py  oem.py  oem_silent.py  ollama_provider.py  openai_provider.py  orchestrator.py  policy.py  provider_factory.py  providers.py  research.py  router.py  safe_ops.py  secret_store.py  task_types.py  tool_executor.py  tools.py
api/: server.py
cli/: __init__.py  main.py
core/: __init__.py  automation.py  bsod_analyzer.py  crash_reporter.py  event_log_triage.py  input_controller.py  process_manager.py  safety.py  screen_capture.py  single_instance.py  updater.py  version.py  window_manager.py
diagnostics/: __init__.py  audio.py  base.py  display.py  files.py  flow_actions.py  flow_engine.py  hardware.py  internet.py  printer.py  security.py  software.py
docs/: MULTI_AGENT_IMPLEMENTATION.md  SUPPORT_RESOURCES.md
installer/: setup.py  zora_setup.iss
monitoring/: __init__.py  (+2 more)
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/capabilities/: default.json
ui/src-tauri/src/: lib.rs  main.rs
(+66 files in other folders)
