[package]
name = "zora-desktop"
version = "1.0.0"
description = "Zora AI Desktop Companion"
authors = ["you"]
edition = "2021"

[lib]
name = "zora_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-autostart = { version = "2", features = ["windows"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
